[project]
name = "asset-hub"
version = "0.1.0"
description = "Serveur MCP pour agréger diverses sources d'assets 3D/2D"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I"]
